--- a/application/app/.github/workflows/deploy.yml
+++ b/application/app/.github/workflows/deploy.yml
@@ -62,26 +62,12 @@ jobs:
           name: my-artifact
           path: distfiles
 
-#      - name: copy file to server
-#        uses: appleboy/scp-action@v0.1.4
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ec2-user
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
-#          port: 22
-#          source: distfiles/*
-#          target: /home/ec2-user/k8s_resources
-#
-#      - name: Update deployment
-#        uses: appleboy/ssh-action@v0.1.10
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: "ec2-user"
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
-#          port: "22"
-#          script: |
-#            export PATH=$PATH:/home/ec2-user/bin:/home/ec2-user/.local/bin
-#            cd /home/ec2-user/k8s_resources
-#            export TAG=$(cat distfiles/tag.txt | tr -d '\n')
-#            yq -i ".spec.template.spec.containers[0].image=\"bogdanbozic/bogdan_goldbach_app_repo:$TAG\"" goldbach-app-deployment.yaml
-#            kubectl apply -f goldbach-app-deployment.yaml
+      - name: Bump version
+        run: |
+              apt-get update
+              apt-get install git yq -Y
+              mkdir infrastructure
+              cd infrastructure
+              git clone https://$${ secrets.GITHUB_TOKEN }}@github.com/${{ secrets.GITHUB_LOGIN }}/${{ secrets.APPLICATION_NAME }}.git .
+
+# TODO: once the infra repo is set up, add version bump code here
