Add infra repo (#3)
* Replace app_name with proj_name

* Add infra_repo

* Cleanup, fix GitHub Actions

--- a/application/app/.github/workflows/deploy.yml
+++ b/application/app/.github/workflows/deploy.yml
@@ -58,8 +58,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t ${{ secrets.ECR_NAME }}:${{ github.sha }} .
-          docker push ${{ secrets.ECR_NAME }}:${{ github.sha }}
+          docker build -t ${{ secrets.ECR_URL }}:${{ github.sha }} .
+          docker push ${{ secrets.ECR_URL }}:${{ github.sha }}
 
       - name: Bump version
         run: |
@@ -68,7 +68,10 @@ jobs:
               yq --version
               mkdir infrastructure
               cd infrastructure
-              echo yay
-#              git clone https://${{ secrets.DEPLOYMENT_TOKEN }}@github.com/${{ secrets.LOGIN_GITHUB }}/${{ secrets.APPLICATION_NAME }}-infra.git .
-
-# TODO: once the infra repo is set up, add version bump code here
+              git config --global user.email "you@example.com"
+              git config --global user.name "GitHub Actions"
+              git clone https://${{ secrets.DEPLOYMENT_TOKEN }}@github.com/${{ secrets.LOGIN_GITHUB }}/${{ secrets.PROJECT_NAME }}-infra.git .
+              yq -i '.image.tag = "${{ github.sha }}"' ./charts/${{ secrets.APP_NAME }}/values.yaml
+              git add .
+              git commit -m "Bump ${{ secrets.APPLICATION_NAME }} version to ${{ github.sha }}"
+              git push
